lldpd (0.9.9)
  * Changes:
    + lldpcli can now display local interfaces with LLDP data sent on
      each of them ("show interfaces").
  * Fix:
    + Don't remove interfaces when they are released from a bridge.

lldpd (0.9.8)
  * Changes:
    + "Station" capability is only set if no other bit is set.
    + Use ethtool to get permanent address for bonds and teams. This
      might provide different results than the previous method. Some
      devices may still use the previous method.
    + Don't run ethtool as root. Kernels older than 2.6.19 won't get
      link information anymore.
    + Add "configure system hostname ." option to not use a FQDN
      for system name.
    + Add "-f json0" to provide a more regular/machine-parsable output
      to JSON output, even when not compiled with --enable-json0.
  * Fixes:
    + Handle team interfaces like a bond. Real MAC address cannot be
      retrieved yet.

lldpd (0.9.7)
  * Changes:
    + Attach remote TTL to port instead of chassis.
    + JSON support is now built-in and unconditionally enabled. Use
      --enable-json0 to keep the pre-0.9.2 json-c format.
    + When logging to syslog and daemonizing, don't log to stderr.
    + vxlan interfaces are now ignored as they are multi-point interfaces.
    + Maximum number of neighbors for an interface is increased from 4 to 32.

lldpd (0.9.6)
  * Changes:
    + Add a compile-time option to restore pre-0.9.2 JSON format (when
      using json-c). Use `--enable-json0` to enable this option.
    + Support for newer ethtool interface on Linux
      (ETHTOOL_GLINKSETTINGS) and additional speed settings.
    + Current MAU type is displayed even when autoneg is off.
    + Increase netlink receive buffer by default. Can be changed at
      compile-time through ./configure.
  * Fixes:
    + Correctly parse LLDP-MED civic address when the length of the
      TLV exceeds the length of the address.
    + Fix 100% CPU on some rare error condition.